--- a/SOPCOVIDChecker/Views/_ViewImports.cshtml
+++ b/SOPCOVIDChecker/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using SOPCOVIDChecker
 @using SOPCOVIDChecker.Models
 @using SOPCOVIDChecker.Models.AccountViewModels
+@using SOPCOVIDChecker.Models.SopViewModel
 @using System.Security.Claims
 @using System.Globalization
 @using SOPCOVIDChecker.Services
