--- a/SOPCOVIDChecker/Views/Sop/SopIndexPartial.cshtml
+++ b/SOPCOVIDChecker/Views/Sop/SopIndexPartial.cshtml
@@ -66,7 +66,7 @@
                         @sop.Sex
                     </td>
                     <td class="text-center text-sm">
-                        @sop.DateOfBirth.GetDate("dd-MM-yy")
+                        @sop.DateOfBirth.GetDate("dd-MMM-yy")
                     </td>
                     <td class="text-center text-sm">
                         @sop.PCRResult
@@ -78,7 +78,7 @@
                         @sop.Address
                     </td>
                     <td class="text-center text-sm">
-                        @sop.DateTimeCollection.GetDate("dd-MM-yy")
+                        @sop.DateTimeCollection.GetDate("dd-MMM-yy")
                     </td>
                     <td class="text-center text-sm">
                         @sop.DateTimeCollection.GetDate("h:mm tt")
@@ -93,13 +93,13 @@
                         @sop.SpecimenCollection
                     </td>
                     <td class="text-center text-sm">
-                        @sop.DateTimeReceipt.GetDate("dd-MM-yy")
+                        @sop.DateTimeReceipt.GetDate("dd-MMM-yy")
                     </td>
                     <td class="text-center text-sm">
                         @sop.DateTimeReceipt.GetDate("h:mm tt")
                     </td>
                     <td class="text-center text-sm">
-                        @sop.DateResult.GetDate("dd-MM-yy")
+                        @sop.DateResult.GetDate("dd-MMM-yy")
                     </td>
                 </tr>
             }
