--- a/SOPCOVIDChecker/Views/_ViewImports.cshtml
+++ b/SOPCOVIDChecker/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using SOPCOVIDChecker.Models
 @using SOPCOVIDChecker.Models.AccountViewModels
 @using SOPCOVIDChecker.Models.SopViewModel
+@using SOPCOVIDChecker.Models.AdminViewModel
 @using System.Security.Claims
 @using System.Globalization
 @using SOPCOVIDChecker.Services
