updates yesterday night

--- a/SOPCOVIDChecker/Views/Sop/AddSopModal.cshtml
+++ b/SOPCOVIDChecker/Views/Sop/AddSopModal.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Sopform
 
-<div class="modal-content" id="register_modal">
+<div class="modal-content" id="new_sop">
     <div class="modal-header">
         <h4>
             <i class="fa fa-user-plus"></i>
@@ -16,7 +16,7 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <label>First name:</label>
-                        <input class="form-control" asp-for="Patient.Fname" />
+                        <input class="form-control" asp-for="Patient.Fname" autofocus />
                     </div>
                 </div>
                 <div class="col-md-4">
