--- a/SOPCOVIDChecker/Views/Sop/SopIndex.cshtml
+++ b/SOPCOVIDChecker/Views/Sop/SopIndex.cshtml
@@ -29,7 +29,7 @@
                                 data-action="#large_content"
                                 data-url="@Url.Action("AddSopModal","Sop")">
                             <i class="fa fa-user"></i>
-                            &nbsp;Add User
+                            &nbsp;New patient
                         </button>
                     </div>
                 </div>
