--- a/SOPCOVIDChecker/Views/_ViewImports.cshtml
+++ b/SOPCOVIDChecker/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using SOPCOVIDChecker
 @using SOPCOVIDChecker.Models
+@using SOPCOVIDChecker.Models.ResuViewModel
 @using SOPCOVIDChecker.Models.AccountViewModels
 @using SOPCOVIDChecker.Models.SopViewModel
 @using SOPCOVIDChecker.Models.AdminViewModel
